HHH-18675: Revert to java 11